--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:value="1" />
 
         <activity
-            android:name="org.ethp.codepath.twitterclient.LoginActivity"
+            android:name="org.ethp.codepath.twitterclient.activities.LoginActivity"
             android:noHistory="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
@@ -48,7 +48,7 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
-        <activity android:name="org.ethp.codepath.twitterclient.TimelineActivity"></activity>
+        <activity android:name="org.ethp.codepath.twitterclient.activities.TimelineActivity"></activity>
     </application>
 
 </manifest>
