--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ android {
     defaultConfig {
         applicationId "com.codepath.apps.restclienttemplate"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
+        vectorDrawables.useSupportLibrary = true
     }
 
     // Related to https://github.com/scribejava/scribejava/issues/480
@@ -36,20 +37,23 @@ def dbflow_version = "3.1.1"
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     // OAuth
-    compile 'com.codepath.libraries:android-oauth-handler:1.1.0'
     // DBFlow
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     // Picasso for remote image loading
+    // Android Async Http for sending async network requests
+    // Support library
+    // DBFlow for simple persistence with an ORM
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    apt 'org.parceler:parceler:1.1.1'
+    compile 'com.codepath.libraries:android-oauth-handler:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
-    // Android Async Http for sending async network requests
     compile 'com.loopj.android:android-async-http:1.4.9'
-    // Support library
+    // Parceler library
+    compile 'org.parceler:parceler-api:1.1.1'
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
-    // DBFlow for simple persistence with an ORM
-    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
 }
