--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <application
         android:name="org.ethp.codepath.twitterclient.TwitterApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/twitter_circle"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <meta-data
