--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,21 +36,20 @@ def dbflow_version = "3.1.1"
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    // Android Support library
     // OAuth
-    // DBFlow
+    // DBFlow for simple persistence with an ORM
+    // Android Async Http for sending async network requests
+    // Picasso for remote image loading
+    // Parceler library
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-    // Picasso for remote image loading
-    // Android Async Http for sending async network requests
-    // Support library
-    // DBFlow for simple persistence with an ORM
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     apt 'org.parceler:parceler:1.1.1'
     compile 'com.codepath.libraries:android-oauth-handler:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
-    // Parceler library
     compile 'org.parceler:parceler-api:1.1.1'
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
