--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     apt 'org.parceler:parceler:1.1.1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.codepath.libraries:android-oauth-handler:1.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
