--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
 
         <activity
             android:name="org.ethp.codepath.twitterclient.activities.LoginActivity"
-            android:noHistory="true"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,7 +48,8 @@
                     android:scheme="oauth" />
             </intent-filter>
         </activity>
-        <activity android:name="org.ethp.codepath.twitterclient.activities.TimelineActivity"></activity>
+        <activity android:name="org.ethp.codepath.twitterclient.activities.TimelineActivity" />
+        <activity android:name="org.ethp.codepath.twitterclient.activities.ProfileActivity"></activity>
     </application>
 
 </manifest>
